# gnnexplain

./: .gitignore  GNN_METHODS_DIAGRAM.md  GRAPHBOLT_FIX.md  INSTALLATION.md  MIGRATION_DGL.md  MODEL_CONFIGURATION_GUIDE.md  OPTIMIZATION_SUMMARY.md  QUICK_REFERENCE.md  README.md  README_KEDRO.md  TROUBLESHOOTING_KNOWLEDGE_GRAPH.md  debug_kg_load.py  fix_graphbolt.py  fix_graphbolt_preimport.py  mlflow.db  pyproject.toml  run_evaluation.sh  validate_improved_page.py
analysis/: gnnexplainer_analysis.ipynb
conf/base/: catalog.yml  logging.yml  mlflow.yml  parameters.yml
conf/local/: catalog.yml  parameters.yml
docs/: COMPGCN_IMPLEMENTATION.md  COMPLETE_PIPELINE_OVERVIEW.md  EXPLAINER_ARCHITECTURE_ANALYSIS.md  EXPLANATION_PIPELINE.md  IMPLEMENTATION_SUMMARY.md  IMPROVED_PAGE_IMPLEMENTATION.md  INPUT_DATA_REQUIREMENTS.md  MODEL_ARCHITECTURES.md  PAGE_INTEGRATION_PLAN.md  PIPELINE_FLOW_DIAGRAM.md  README.md
docs/archive/: BUGFIX_CUDA_INDEX.md  EXPLAINER_METHODS_REVIEW.md  EXPLANATION_EXAMPLES.md  README.md  USAGE_GUIDE.md
docs/kedro/: CHANGES_SUMMARY.md  IMPLEMENTATION_STATUS.md  MIGRATION_GUIDE.md
src/: cl_eval.py  cl_model.py  create_id_name_map.py  eval_kedro_model.py  explainers.py  model.py  triple_filter_prefix.py  utils.py  visualize_explanation.py
src/gnn_explainer/: __init__.py  __main__.py  pipeline_registry.py  settings.py
src/gnn_explainer.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/gnn_explainer/hooks/: __init__.py  mlflow_hook.py
src/gnn_explainer/pipelines/: __init__.py
src/gnn_explainer/pipelines/data_preparation/: __init__.py  nodes.py  (+1 more)
src/gnn_explainer/utils/: __init__.py  mlflow_utils.py
tests/: __init__.py  test_compgcn_encoder.py  test_explanation_pipeline.py
(+24 files in other folders)
